[package]
name = "msgpack-bug"
version = "0.1.0"
authors = ["Jakub Beránek <berykubik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.14.3"
rmpv = { version = "0.4", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
